--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
                              loading="eager" />
                     </div>
                     <div class="p-4 md:p-6">
-                        <h3 class="text-lg md:text-xl font-semibold mb-2 text-pine-green">1> Cookie Decorating Elf</h3>
+                        <h3 class="text-lg md:text-xl font-semibold mb-2 text-pine-green">1. Cookie Decorating Elf</h3>
                         <p class="text-gray-600 mb-4 text-sm md:text-base">A playful Christmas elf is busy decorating cookies with colorful frosting and sprinkles, bringing sweet holiday cheer to the kitchen. This festive elf cookie-decorating scene captures the magic of Christmas baking fun.</p>
                         <button class="btn-primary text-white px-4 py-2 rounded-lg w-full saveImageBtn text-sm md:text-base"
                                 data-image-url="https://ritamdebnatharc.github.io/Elf-on-the-Shelf-Ideas/1-Elf-caught-icing-cookies-with-sprinkles.avif"
@@ -414,7 +414,7 @@
                 </card>
 
                 <!-- Idea Card 2 -->
-                <article class="bg-white rounded-lg shadow-lg overflow-hidden card-hover">
+                <card class="bg-white rounded-lg shadow-lg overflow-hidden card-hover">
                     <div class="aspect-w-16 aspect-h-9 bg-gradient-to-br from-blue-100 to-purple-100">
                         <img src="https://ritamdebnatharc.github.io/Elf-on-the-Shelf-Ideas/2-elf-throwing-mini-marshmallows-like-snowballs.avif" 
                              alt="Snowball Fight Elf" 
@@ -424,7 +424,7 @@
                              loading="lazy" />
                     </div>
                     <div class="p-4 md:p-6">
-                        <h3 class="text-lg md:text-xl font-semibold mb-2 text-pine-green">Snowball Fight Elf</h3>
+                        <h3 class="text-lg md:text-xl font-semibold mb-2 text-pine-green">2. Snowball Fight Elf</h3>
                         <p class="text-gray-600 mb-4 text-sm md:text-base">Watch a mischievous Christmas elf turn mini marshmallows into snowballs for a playful holiday snowball fight. This funny elf winter scene is perfect for adding laughter and festive spirit to your Christmas decor ideas.</p>
                         <button class="btn-secondary text-white px-4 py-2 rounded-lg w-full saveImageBtn text-sm md:text-base"
                                 data-image-url="https://ritamdebnatharc.github.io/Elf-on-the-Shelf-Ideas/2-elf-throwing-mini-marshmallows-like-snowballs.avif"
@@ -433,7 +433,7 @@
                             <i class="fas fa-download mr-2" aria-hidden="true"></i>Save Image
                         </button>
                     </div>
-                </article>
+                </card>
 
                 <!-- Idea Card 3 -->
                 <article class="bg-white rounded-lg shadow-lg overflow-hidden card-hover">
@@ -446,7 +446,7 @@
                              loading="lazy" />
                     </div>
                     <div class="p-4 md:p-6">
-                        <h3 class="text-lg md:text-xl font-semibold mb-2 text-pine-green">Hot Cocoa Bath Elf</h3>
+                        <h3 class="text-lg md:text-xl font-semibold mb-2 text-pine-green">3. Hot Cocoa Bath Elf</h3>
                         <p class="text-gray-600 mb-4 text-sm md:text-base">A cozy Christmas elf relaxes inside a giant mug of hot cocoa topped with marshmallows, creating the ultimate holiday comfort scene. This warm and whimsical elf cocoa bath design captures the magic of winter coziness.</p>
                         <button class="btn-primary text-white px-4 py-2 rounded-lg w-full saveImageBtn text-sm md:text-base"
                                 data-image-url="https://ritamdebnatharc.github.io/Elf-on-the-Shelf-Ideas/3-elf-relaxing-in-a-mug-of-cocoa-and-marshmallows.avif"
@@ -455,10 +455,10 @@
                             <i class="fas fa-download mr-2" aria-hidden="true"></i>Save Image
                         </button>
                     </div>
-                </article>
+                </card>
 
                 <!-- Idea Card 4 -->
-                <article class="bg-white rounded-lg shadow-lg overflow-hidden card-hover">
+                <card class="bg-white rounded-lg shadow-lg overflow-hidden card-hover">
                     <div class="aspect-w-16 aspect-h-9 bg-gradient-to-br from-green-100 to-teal-100">
                         <img src="https://ritamdebnatharc.github.io/Elf-on-the-Shelf-Ideas/4-elf-reading-a-mini-christmas-storybook.avif" 
                              alt="Bookworm Elf" 
@@ -468,7 +468,7 @@
                              loading="lazy" />
                     </div>
                     <div class="p-4 md:p-6">
-                        <h3 class="text-lg md:text-xl font-semibold mb-2 text-pine-green">Bookworm Elf</h3>
+                        <h3 class="text-lg md:text-xl font-semibold mb-2 text-pine-green">4. Bookworm Elf</h3>
                         <p class="text-gray-600 mb-4 text-sm md:text-base">This curious Christmas elf is enjoying a tiny holiday storybook, bringing the joy of festive reading to life. A perfect elf scene for cozy winter nights, inspiring holiday storytelling and magical family traditions.</p>
                         <button class="btn-secondary text-white px-4 py-2 rounded-lg w-full saveImageBtn text-sm md:text-base"
                                 data-image-url="https://ritamdebnatharc.github.io/Elf-on-the-Shelf-Ideas/4-elf-reading-a-mini-christmas-storybook.avif"
@@ -477,10 +477,10 @@
                             <i class="fas fa-download mr-2" aria-hidden="true"></i>Save Image
                         </button>
                     </div>
-                </article>
+                </card>
 
                 <!-- Idea Card 5 -->
-                <article class="bg-white rounded-lg shadow-lg overflow-hidden card-hover">
+                <card class="bg-white rounded-lg shadow-lg overflow-hidden card-hover">
                     <div class="aspect-w-16 aspect-h-9 bg-gradient-to-br from-pink-100 to-red-100">
                         <img src="https://ritamdebnatharc.github.io/Elf-on-the-Shelf-Ideas/5-elf-climbing-up-the-christmas-tree.avif" 
                              alt="Christmas Tree Climber" 
@@ -490,7 +490,7 @@
                              loading="lazy" />
                     </div>
                     <div class="p-4 md:p-6">
-                        <h3 class="text-lg md:text-xl font-semibold mb-2 text-pine-green">Christmas Tree Climber</h3>
+                        <h3 class="text-lg md:text-xl font-semibold mb-2 text-pine-green">5. Christmas Tree Climber</h3>
                         <p class="text-gray-600 mb-4 text-sm md:text-base">A cheeky Christmas elf climbs a beautifully decorated holiday tree, surrounded by ornaments and twinkling lights. This fun and playful elf tree-climbing scene adds festive mischief to your Christmas celebrations.</p>
                         <button class="btn-primary text-white px-4 py-2 rounded-lg w-full saveImageBtn text-sm md:text-base"
                                 data-image-url="https://ritamdebnatharc.github.io/Elf-on-the-Shelf-Ideas/5-elf-climbing-up-the-christmas-tree.avif"
@@ -499,10 +499,10 @@
                             <i class="fas fa-download mr-2" aria-hidden="true"></i>Save Image
                         </button>
                     </div>
-                </article>
+                </card>
 
                 <!-- Idea Card 6 -->
-                <article class="bg-white rounded-lg shadow-lg overflow-hidden card-hover">
+                <card class="bg-white rounded-lg shadow-lg overflow-hidden card-hover">
                     <div class="aspect-w-16 aspect-h-9 bg-gradient-to-br from-purple-100 to-indigo-100">
                         <img src="https://ritamdebnatharc.github.io/Elf-on-the-Shelf-Ideas/6-elf-hiding-inside-a-christmas-stocking.avif" 
                              alt="Elf in a Stocking" 
@@ -512,7 +512,7 @@
                              loading="lazy" />
                     </div>
                     <div class="p-4 md:p-6">
-                        <h3 class="text-lg md:text-xl font-semibold mb-2 text-pine-green">Elf in a Stocking</h3>
+                        <h3 class="text-lg md:text-xl font-semibold mb-2 text-pine-green">6. Elf in a Stocking</h3>
                         <p class="text-gray-600 mb-4 text-sm md:text-base">A sneaky Christmas elf peeks out from a red holiday stocking, ready to surprise anyone near the fireplace. This adorable stocking stuffer elf scene is a perfect mix of Christmas magic and playful mischief.</p>
                         <button class="btn-secondary text-white px-4 py-2 rounded-lg w-full saveImageBtn text-sm md:text-base"
                                 data-image-url="https://ritamdebnatharc.github.io/Elf-on-the-Shelf-Ideas/6-elf-hiding-inside-a-christmas-stocking.avif"
@@ -521,9 +521,9 @@
                             <i class="fas fa-download mr-2" aria-hidden="true"></i>Save Image
                         </button>
                     </div>
-                </article>
-                <!-- Idea Card 7 -->
-<article class="bg-white rounded-lg shadow-lg overflow-hidden card-hover">
+                </card>
+               <!-- Idea Card 7 -->
+<card class="bg-white rounded-lg shadow-lg overflow-hidden card-hover">
     <div class="aspect-w-16 aspect-h-9 bg-gradient-to-br from-purple-100 to-indigo-100">
         <img src="https://res.cloudinary.com/dsmt3fivf/image/upload/v1756730667/7-Marshmallow_Spa_Elf_fgqe4i.avif" 
              alt="Marshmallow Spa Elf" 
@@ -533,20 +533,20 @@
              loading="lazy" />
     </div>
     <div class="p-4 md:p-6">
-        <h3 class="text-lg md:text-xl font-semibold mb-2 text-pine-green">Marshmallow Spa Elf</h3>
+        <h3 class="text-lg md:text-xl font-semibold mb-2 text-pine-green">7. Marshmallow Spa Elf</h3>
         <p class="text-gray-600 mb-4 text-sm md:text-base">This elf is living the sweet life, soaking in a fluffy marshmallow bubble bath. A cozy and whimsical holiday scene that brings spa-day relaxation to Christmas mischief.</p>
-        <button class="btn-secondary text-white px-4 py-2 rounded-lg w-full saveImageBtn text-sm md:text-base"
+        <button class="btn-primary text-white px-4 py-2 rounded-lg w-full saveImageBtn text-sm md:text-base"
                 data-image-url="https://res.cloudinary.com/dsmt3fivf/image/upload/v1756730667/7-Marshmallow_Spa_Elf_fgqe4i.avif"
                 data-file-name="Marshmallow_Spa_Elf.avif"
                 aria-label="Save Marshmallow Spa Elf image">
             <i class="fas fa-download mr-2" aria-hidden="true"></i>Save Image
         </button>
     </div>
-</article>
+</card>
 
 <!-- Idea Card 8 -->
-<article class="bg-white rounded-lg shadow-lg overflow-hidden card-hover">
-    <div class="aspect-w-16 aspect-h-9 bg-gradient-to-br from-purple-100 to-indigo-100">
+<card class="bg-white rounded-lg shadow-lg overflow-hidden card-hover">
+    <div class="aspect-w-16 aspect-h-9 bg-gradient-to-br from-green-100 to-teal-100">
         <img src="https://res.cloudinary.com/dsmt3fivf/image/upload/v1756730667/8-Gamer_Elf_tgwag0.avif" 
              alt="Gamer Elf" 
              class="card-img" 
@@ -555,20 +555,20 @@
              loading="lazy" />
     </div>
     <div class="p-4 md:p-6">
-        <h3 class="text-lg md:text-xl font-semibold mb-2 text-pine-green">Gamer Elf</h3>
+        <h3 class="text-lg md:text-xl font-semibold mb-2 text-pine-green">8. Gamer Elf</h3>
         <p class="text-gray-600 mb-4 text-sm md:text-base">Even elves need some downtime, and this one is glued to a video game with a toy controller. A playful idea that shows the fun side of holiday gaming nights.</p>
-        <button class="btn-secondary text-white px-4 py-2 rounded-lg w-full saveImageBtn text-sm md:text-base"
+        <button class="btn-primary text-white px-4 py-2 rounded-lg w-full saveImageBtn text-sm md:text-base"
                 data-image-url="https://res.cloudinary.com/dsmt3fivf/image/upload/v1756730667/8-Gamer_Elf_tgwag0.avif"
                 data-file-name="Gamer_Elf.avif"
                 aria-label="Save Gamer Elf image">
             <i class="fas fa-download mr-2" aria-hidden="true"></i>Save Image
         </button>
     </div>
-</article>
+</card>
 
 <!-- Idea Card 9 -->
-<article class="bg-white rounded-lg shadow-lg overflow-hidden card-hover">
-    <div class="aspect-w-16 aspect-h-9 bg-gradient-to-br from-purple-100 to-indigo-100">
+<card class="bg-white rounded-lg shadow-lg overflow-hidden card-hover">
+    <div class="aspect-w-16 aspect-h-9 bg-gradient-to-br from-yellow-100 to-orange-100">
         <img src="https://res.cloudinary.com/dsmt3fivf/image/upload/v1756730667/9-Elf_Zip_Line_eagd5n.avif" 
              alt="Elf Zip Line" 
              class="card-img" 
@@ -577,20 +577,20 @@
              loading="lazy" />
     </div>
     <div class="p-4 md:p-6">
-        <h3 class="text-lg md:text-xl font-semibold mb-2 text-pine-green">Elf Zip Line</h3>
+        <h3 class="text-lg md:text-xl font-semibold mb-2 text-pine-green">9. Elf Zip Line</h3>
         <p class="text-gray-600 mb-4 text-sm md:text-base">Adventure awaits as this elf zips across the room on a candy cane zip line. A high-energy setup that fills your home with festive action and giggles.</p>
-        <button class="btn-secondary text-white px-4 py-2 rounded-lg w-full saveImageBtn text-sm md:text-base"
+        <button class="btn-primary text-white px-4 py-2 rounded-lg w-full saveImageBtn text-sm md:text-base"
                 data-image-url="https://res.cloudinary.com/dsmt3fivf/image/upload/v1756730667/9-Elf_Zip_Line_eagd5n.avif"
                 data-file-name="Elf_Zip_Line.avif"
                 aria-label="Save Elf Zip Line image">
             <i class="fas fa-download mr-2" aria-hidden="true"></i>Save Image
         </button>
     </div>
-</article>
+</card>
 
 <!-- Idea Card 10 -->
-<article class="bg-white rounded-lg shadow-lg overflow-hidden card-hover">
-    <div class="aspect-w-16 aspect-h-9 bg-gradient-to-br from-purple-100 to-indigo-100">
+<card class="bg-white rounded-lg shadow-lg overflow-hidden card-hover">
+    <div class="aspect-w-16 aspect-h-9 bg-gradient-to-br from-red-100 to-pink-100">
         <img src="https://res.cloudinary.com/dsmt3fivf/image/upload/v1756730666/Toilet_Paper_Roll_Elf_t1xtrs.avif" 
              alt="Toilet Paper Roll Elf" 
              class="card-img" 
@@ -599,20 +599,20 @@
              loading="lazy" />
     </div>
     <div class="p-4 md:p-6">
-        <h3 class="text-lg md:text-xl font-semibold mb-2 text-pine-green">Toilet Paper Roll Elf</h3>
+        <h3 class="text-lg md:text-xl font-semibold mb-2 text-pine-green">10. Toilet Paper Roll Elf</h3>
         <p class="text-gray-600 mb-4 text-sm md:text-base">Caught in a silly mess, this elf is stuck inside a toilet paper roll. A hilarious holiday prank that adds laughter to your Christmas countdown.</p>
-        <button class="btn-secondary text-white px-4 py-2 rounded-lg w-full saveImageBtn text-sm md:text-base"
+        <button class="btn-primary text-white px-4 py-2 rounded-lg w-full saveImageBtn text-sm md:text-base"
                 data-image-url="https://res.cloudinary.com/dsmt3fivf/image/upload/v1756730666/Toilet_Paper_Roll_Elf_t1xtrs.avif"
                 data-file-name="Toilet_Paper_Roll_Elf.avif"
                 aria-label="Save Toilet Paper Roll Elf image">
             <i class="fas fa-download mr-2" aria-hidden="true"></i>Save Image
         </button>
     </div>
-</article>
+</card>
 
 <!-- Idea Card 11 -->
-<article class="bg-white rounded-lg shadow-lg overflow-hidden card-hover">
-    <div class="aspect-w-16 aspect-h-9 bg-gradient-to-br from-purple-100 to-indigo-100">
+<card class="bg-white rounded-lg shadow-lg overflow-hidden card-hover">
+    <div class="aspect-w-16 aspect-h-9 bg-gradient-to-br from-blue-100 to-indigo-100">
         <img src="https://res.cloudinary.com/dsmt3fivf/image/upload/v1756730666/Baking_Helper_Elf_rpcq5q.avif" 
              alt="Baking Helper Elf" 
              class="card-img" 
@@ -621,20 +621,20 @@
              loading="lazy" />
     </div>
     <div class="p-4 md:p-6">
-        <h3 class="text-lg md:text-xl font-semibold mb-2 text-pine-green">Baking Helper Elf</h3>
+        <h3 class="text-lg md:text-xl font-semibold mb-2 text-pine-green">11. Baking Helper Elf</h3>
         <p class="text-gray-600 mb-4 text-sm md:text-base">Covered head to toe in flour, this elf has clearly been “helping” in the kitchen. A funny baking scene that makes holiday treats extra memorable.</p>
-        <button class="btn-secondary text-white px-4 py-2 rounded-lg w-full saveImageBtn text-sm md:text-base"
+        <button class="btn-primary text-white px-4 py-2 rounded-lg w-full saveImageBtn text-sm md:text-base"
                 data-image-url="https://res.cloudinary.com/dsmt3fivf/image/upload/v1756730666/Baking_Helper_Elf_rpcq5q.avif"
                 data-file-name="Baking_Helper_Elf.avif"
                 aria-label="Save Baking Helper Elf image">
             <i class="fas fa-download mr-2" aria-hidden="true"></i>Save Image
         </button>
     </div>
-</article>
+</card>
 
 <!-- Idea Card 12 -->
-<article class="bg-white rounded-lg shadow-lg overflow-hidden card-hover">
-    <div class="aspect-w-16 aspect-h-9 bg-gradient-to-br from-purple-100 to-indigo-100">
+<card class="bg-white rounded-lg shadow-lg overflow-hidden card-hover">
+    <div class="aspect-w-16 aspect-h-9 bg-gradient-to-br from-pink-100 to-purple-100">
         <img src="https://res.cloudinary.com/dsmt3fivf/image/upload/v1756730666/Elf_Rock_Band_pumarw.avif" 
              alt="Elf Rock Band" 
              class="card-img" 
@@ -643,16 +643,17 @@
              loading="lazy" />
     </div>
     <div class="p-4 md:p-6">
-        <h3 class="text-lg md:text-xl font-semibold mb-2 text-pine-green">Elf Rock Band</h3>
+        <h3 class="text-lg md:text-xl font-semibold mb-2 text-pine-green">12. Elf Rock Band</h3>
         <p class="text-gray-600 mb-4 text-sm md:text-base">Rocking out with a toy guitar, this elf is ready to put on a Christmas concert. A lively idea that adds music, fun, and festive energy to your holiday decor.</p>
-        <button class="btn-secondary text-white px-4 py-2 rounded-lg w-full saveImageBtn text-sm md:text-base"
+        <button class="btn-primary text-white px-4 py-2 rounded-lg w-full saveImageBtn text-sm md:text-base"
                 data-image-url="https://res.cloudinary.com/dsmt3fivf/image/upload/v1756730666/Elf_Rock_Band_pumarw.avif"
                 data-file-name="Elf_Rock_Band.avif"
                 aria-label="Save Elf Rock Band image">
             <i class="fas fa-download mr-2" aria-hidden="true"></i>Save Image
         </button>
     </div>
-</article>
+</card>
+
 
             </div>
         </div>
