--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 
     <!-- JSON-LD Schema -->
-  <script type="application/ld+json">
+<script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@graph": [
@@ -87,62 +87,62 @@
         {
           "@type": "WebPageElement",
           "name": "Introduction to Elf on the Shelf Magic",
-          "text": "The Elf on the Shelf tradition has become one of the most beloved Christmas activities for families around the world. Finding new elf ideas and creative elf on shelf suggestions can be both exciting and challenging for parents who want to keep the magic alive throughout the holiday season. Whether you're looking for easy elf on the shelf ideas, funny elf on the shelf ideas, or quick elf on the shelf ideas, this comprehensive guide has everything you need."
+          "text": "The Elf on the Shelf tradition has become one of the most beloved Christmas activities..."
         },
         {
           "@type": "WebPageElement",
           "name": "Easy Elf on the Shelf Ideas",
-          "text": "When you need easy elf ideas that require minimal setup time, these simple yet effective suggestions will save the day. The best easy elf on the shelf ideas often use items you already have around the house, making them perfect for busy parents or last-minute planning sessions. Simple setups include positioning your elf with everyday household items, like spilled flour in the kitchen or tangled Christmas lights."
+          "text": "When you need easy elf ideas that require minimal setup time..."
         },
         {
           "@type": "WebPageElement",
           "name": "Funny Elf on the Shelf Ideas",
-          "text": "Funny elf on the shelf ideas are essential for keeping the tradition fresh and entertaining. The funniest elf on a shelf setups often involve the elf getting into mischievous situations that make both children and adults laugh. Examples include toilet paper parties and redecorating family photos."
+          "text": "Funny elf on the shelf ideas are essential for keeping the tradition fresh..."
         },
         {
           "@type": "WebPageElement",
           "name": "Naughty Elf Ideas",
-          "text": "Naughty elf ideas add an element of mischief and surprise to your Elf on the Shelf tradition. These ideas show that even Santa's helpers can get into trouble sometimes, with harmless activities like marshmallow food fights or wrapped household items."
+          "text": "Naughty elf ideas add an element of mischief and surprise..."
         },
         {
           "@type": "WebPageElement",
           "name": "Quick Elf on the Shelf Ideas",
-          "text": "Quick elf on the shelf ideas become essential for busy families. These fast setups can be done in under five minutes using items readily available at home, like tiny books or refrigerator notes."
+          "text": "Quick elf on the shelf ideas become essential for busy families..."
         },
         {
           "@type": "WebPageElement",
           "name": "Elf on the Shelf Accessories and Kits",
-          "text": "Investing in quality elf on the shelf accessories can expand your creative setups. These include tiny furniture, miniature food props, and dollhouse items that help create more believable scenes."
+          "text": "Investing in quality elf on the shelf accessories can expand your creativity..."
         },
         {
           "@type": "WebPageElement",
           "name": "Pets for Elf on the Shelf",
-          "text": "Incorporating pets for elf on the shelf activities adds magic and excitement. Whether real or toy animals, these scenarios create memorable interactions that children love."
+          "text": "Incorporating pets for elf on the shelf activities adds magic and excitement..."
         },
         {
           "@type": "WebPageElement",
           "name": "Advanced Elf Scenarios and Themes",
-          "text": "Experienced families seek more sophisticated elf setups with storylines and themes such as Elf Olympics or career weeks, creating engaging narratives throughout the Christmas season."
+          "text": "Experienced families seek more sophisticated elf setups with storylines..."
         },
         {
           "@type": "WebPageElement",
           "name": "Creating Elf Environments and Settings",
-          "text": "Memorable elf ideas often create complete environments with miniature worlds and themed backdrops. Lighting, mirrors, and seasonal elements enhance the magical atmosphere."
+          "text": "Memorable elf ideas often create complete environments with miniature worlds..."
         },
         {
           "@type": "WebPageElement",
           "name": "Creative and Educational Elf Ideas",
-          "text": "Educational elf setups can reinforce learning with scenarios including geography study, language learning, and artistic inspiration, blending fun and education."
+          "text": "Educational elf setups can reinforce learning with geography, language..."
         },
         {
           "@type": "WebPageElement",
           "name": "Planning and Organization Tips",
-          "text": "Strategic planning and organization are key to successful elf traditions. Scheduling ideas, preparing materials in advance, and documenting successful setups help maintain consistent magic."
+          "text": "Strategic planning and organization are key to successful elf traditions..."
         },
         {
           "@type": "WebPageElement",
           "name": "Conclusion: Making Christmas Magic Last",
-          "text": "The Elf on the Shelf tradition fosters family bonding and magical memories. Choosing approaches that fit your family's style, focusing on joy and wonder, creates treasured holiday moments year after year."
+          "text": "The Elf on the Shelf tradition fosters family bonding and magical memories..."
         }
       ]
     },
@@ -187,10 +187,53 @@
       "name": "Elf in a Stocking",
       "description": "A sneaky Christmas elf peeks out from a red holiday stocking, ready to surprise anyone near the fireplace.",
       "contentUrl": "https://ritamdebnatharc.github.io/Elf-on-the-Shelf-Ideas/6-elf-hiding-inside-a-christmas-stocking.avif"
+    },
+    {
+      "@type": "ImageObject",
+      "position": 7,
+      "name": "Marshmallow Spa Elf",
+      "description": "This elf is living the sweet life, soaking in a fluffy marshmallow bubble bath. A cozy and whimsical holiday scene that brings spa-day relaxation to Christmas mischief.",
+      "contentUrl": "https://res.cloudinary.com/dsmt3fivf/image/upload/v1756730667/7-Marshmallow_Spa_Elf_fgqe4i.avif"
+    },
+    {
+      "@type": "ImageObject",
+      "position": 8,
+      "name": "Gamer Elf",
+      "description": "Even elves need some downtime, and this one is glued to a video game with a toy controller. A playful idea that shows the fun side of holiday gaming nights.",
+      "contentUrl": "https://res.cloudinary.com/dsmt3fivf/image/upload/v1756730667/8-Gamer_Elf_tgwag0.avif"
+    },
+    {
+      "@type": "ImageObject",
+      "position": 9,
+      "name": "Elf Zip Line",
+      "description": "Adventure awaits as this elf zips across the room on a candy cane zip line. A high-energy setup that fills your home with festive action and giggles.",
+      "contentUrl": "https://res.cloudinary.com/dsmt3fivf/image/upload/v1756730667/9-Elf_Zip_Line_eagd5n.avif"
+    },
+    {
+      "@type": "ImageObject",
+      "position": 10,
+      "name": "Toilet Paper Roll Elf",
+      "description": "Caught in a silly mess, this elf is stuck inside a toilet paper roll. A hilarious holiday prank that adds laughter to your Christmas countdown.",
+      "contentUrl": "https://res.cloudinary.com/dsmt3fivf/image/upload/v1756730666/Toilet_Paper_Roll_Elf_t1xtrs.avif"
+    },
+    {
+      "@type": "ImageObject",
+      "position": 11,
+      "name": "Baking Helper Elf",
+      "description": "Covered head to toe in flour, this elf has clearly been “helping” in the kitchen. A funny baking scene that makes holiday treats extra memorable.",
+      "contentUrl": "https://res.cloudinary.com/dsmt3fivf/image/upload/v1756730666/Baking_Helper_Elf_rpcq5q.avif"
+    },
+    {
+      "@type": "ImageObject",
+      "position": 12,
+      "name": "Elf Rock Band",
+      "description": "Rocking out with a toy guitar, this elf is ready to put on a Christmas concert. A lively idea that adds music, fun, and festive energy to your holiday decor.",
+      "contentUrl": "https://res.cloudinary.com/dsmt3fivf/image/upload/v1756730666/Elf_Rock_Band_pumarw.avif"
     }
   ]
 }
 </script>
+
 
     <!-- Critical CSS Inlined -->
     <style>
@@ -533,7 +576,7 @@
              loading="lazy" />
     </div>
     <div class="p-4 md:p-6">
-        <h3 class="text-lg md:text-xl font-semibold mb-2 text-pine-green">Marshmallow Spa Elf</h3>
+        <h3 class="text-lg md:text-xl font-semibold mb-2 text-pine-green">7. Marshmallow Spa Elf</h3>
         <p class="text-gray-600 mb-4 text-sm md:text-base">This elf is living the sweet life, soaking in a fluffy marshmallow bubble bath. A cozy and whimsical holiday scene that brings spa-day relaxation to Christmas mischief.</p>
         <button class="btn-secondary text-white px-4 py-2 rounded-lg w-full saveImageBtn text-sm md:text-base"
                 data-image-url="https://res.cloudinary.com/dsmt3fivf/image/upload/v1756730667/7-Marshmallow_Spa_Elf_fgqe4i.avif"
@@ -555,7 +598,7 @@
              loading="lazy" />
     </div>
     <div class="p-4 md:p-6">
-        <h3 class="text-lg md:text-xl font-semibold mb-2 text-pine-green">Gamer Elf</h3>
+        <h3 class="text-lg md:text-xl font-semibold mb-2 text-pine-green">8. Gamer Elf</h3>
         <p class="text-gray-600 mb-4 text-sm md:text-base">Even elves need some downtime, and this one is glued to a video game with a toy controller. A playful idea that shows the fun side of holiday gaming nights.</p>
         <button class="btn-secondary text-white px-4 py-2 rounded-lg w-full saveImageBtn text-sm md:text-base"
                 data-image-url="https://res.cloudinary.com/dsmt3fivf/image/upload/v1756730667/8-Gamer_Elf_tgwag0.avif"
@@ -577,7 +620,7 @@
              loading="lazy" />
     </div>
     <div class="p-4 md:p-6">
-        <h3 class="text-lg md:text-xl font-semibold mb-2 text-pine-green">Elf Zip Line</h3>
+        <h3 class="text-lg md:text-xl font-semibold mb-2 text-pine-green">9. Elf Zip Line</h3>
         <p class="text-gray-600 mb-4 text-sm md:text-base">Adventure awaits as this elf zips across the room on a candy cane zip line. A high-energy setup that fills your home with festive action and giggles.</p>
         <button class="btn-secondary text-white px-4 py-2 rounded-lg w-full saveImageBtn text-sm md:text-base"
                 data-image-url="https://res.cloudinary.com/dsmt3fivf/image/upload/v1756730667/9-Elf_Zip_Line_eagd5n.avif"
@@ -599,7 +642,7 @@
              loading="lazy" />
     </div>
     <div class="p-4 md:p-6">
-        <h3 class="text-lg md:text-xl font-semibold mb-2 text-pine-green">Toilet Paper Roll Elf</h3>
+        <h3 class="text-lg md:text-xl font-semibold mb-2 text-pine-green">10. Toilet Paper Roll Elf</h3>
         <p class="text-gray-600 mb-4 text-sm md:text-base">Caught in a silly mess, this elf is stuck inside a toilet paper roll. A hilarious holiday prank that adds laughter to your Christmas countdown.</p>
         <button class="btn-secondary text-white px-4 py-2 rounded-lg w-full saveImageBtn text-sm md:text-base"
                 data-image-url="https://res.cloudinary.com/dsmt3fivf/image/upload/v1756730666/Toilet_Paper_Roll_Elf_t1xtrs.avif"
@@ -621,7 +664,7 @@
              loading="lazy" />
     </div>
     <div class="p-4 md:p-6">
-        <h3 class="text-lg md:text-xl font-semibold mb-2 text-pine-green">Baking Helper Elf</h3>
+        <h3 class="text-lg md:text-xl font-semibold mb-2 text-pine-green">11. Baking Helper Elf</h3>
         <p class="text-gray-600 mb-4 text-sm md:text-base">Covered head to toe in flour, this elf has clearly been “helping” in the kitchen. A funny baking scene that makes holiday treats extra memorable.</p>
         <button class="btn-secondary text-white px-4 py-2 rounded-lg w-full saveImageBtn text-sm md:text-base"
                 data-image-url="https://res.cloudinary.com/dsmt3fivf/image/upload/v1756730666/Baking_Helper_Elf_rpcq5q.avif"
@@ -643,7 +686,7 @@
              loading="lazy" />
     </div>
     <div class="p-4 md:p-6">
-        <h3 class="text-lg md:text-xl font-semibold mb-2 text-pine-green">Elf Rock Band</h3>
+        <h3 class="text-lg md:text-xl font-semibold mb-2 text-pine-green">12. Elf Rock Band</h3>
         <p class="text-gray-600 mb-4 text-sm md:text-base">Rocking out with a toy guitar, this elf is ready to put on a Christmas concert. A lively idea that adds music, fun, and festive energy to your holiday decor.</p>
         <button class="btn-secondary text-white px-4 py-2 rounded-lg w-full saveImageBtn text-sm md:text-base"
                 data-image-url="https://res.cloudinary.com/dsmt3fivf/image/upload/v1756730666/Elf_Rock_Band_pumarw.avif"
@@ -733,7 +776,7 @@
         <div class="max-w-4xl mx-auto px-4 text-center">
             <div class="flex items-center justify-center space-x-4 mb-4">
                 <span class="text-2xl md:text-3xl" aria-hidden="true">🧝‍♂️</span>
-                <p class="text-base md:text-lg">© 2024 Elf on the Shelf Ideas. Making Christmas magical, one elf idea at a time!</p>
+                <p class="text-base md:text-lg">© 2025 Elf on the Shelf Ideas. Making Christmas magical, one elf idea at a time!</p>
                 <span class="text-2xl md:text-3xl" aria-hidden="true">🎄</span>
             </div>
             <p class="text-xs md:text-sm opacity-75">
